infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goi-ui-ingress
  namespace: personal-goi
spec:
  ingressClassName: nginx
  rules:
    - host: goi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goi-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goi-api-ingress
  namespace: personal-goi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: goi.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: goi-api
                port:
                  number: 8000
